Atualização do Loren
Atualização do Loren

--- a/projeto3.html
+++ b/projeto3.html
@@ -17,7 +17,7 @@
         <section class="div1">
             <h1>Easy Shopping</h1>
             <h1>Via Mobile</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit molestiae ab cumque alias soluta aperiam quibusdam exercitationem similique quisquam dolor quaerat tenetur debitis, sapiente ad at possimus, numquam veritatis recusandae!</p>
+            <p>Lorem hfsief dolor sit amet consectetur, adipisicing elit. Sit molestiae ab cumque alias soluta aperiam quibusdam exercitationem similique quisquam dolor quaerat tenetur debitis, sapiente ad at possimus, numquam veritatis recusandae!</p>
             <button class="button-get-started">Get Starded</button>
         </section>
 
