Alteração do paragrafo

--- a/projeto1.html
+++ b/projeto1.html
@@ -30,7 +30,7 @@
         <section>
         <h1>WE CARE</h1>
         <h2>About Your Pet</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ratione explicabo inventore magni quod
+        <p>Teste Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ratione explicabo inventore magni quod
             officiis laborum nisi quae doloribus velit, cupiditate iusto assumenda mollitia corporis molestias?
             Perspiciatis unde veritatis vero.</p>
         <button class="button-main" >Explore</button>
